--- a/templates/upstream.conf.j2
+++ b/templates/upstream.conf.j2
@@ -1,3 +1,4 @@
+#jinja2: trim_blocks: True, lstrip_blocks: True
 # {{ ansible_managed }}
 {% if nginx_backends is defined and nginx_backends != None %}
 {% for backend in nginx_backends %}
@@ -5,7 +6,13 @@ upstream {{ backend.service }} {
 {% for host in backend.servers %}
 	server {{ host }};
 {% endfor %}
-	keepalive {{ nginx_keepalive }};
+{% if backend.options is defined and backend.options != None %}
+{% for option in backend.options %}
+    {{ option }};
+{% endfor %}
+{% else %}
+    keepalive {{ nginx_keepalive }};
+{% endif %}
 }
 {% endfor %}
 {% endif %}
