--- a/templates/nginx.conf.j2
+++ b/templates/nginx.conf.j2
@@ -52,7 +52,7 @@ http {
     client_header_buffer_size {{ nginx_client_header_buffer_size }};
     client_header_timeout {{ nginx_client_header_timeout }};
 
-    log_format main {{ nginx_log_format_main | indent(20, False) }}
+    {{ nginx_log_format_main | indent(20, False) }}
 
     access_log  {{ nginx_access_log }};
 
